--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,11 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Pacer</title>
+    <!-- <script
+      defer
+      src="https://maps.googleapis.com/maps/api/js?key=${process.env.REACT_APP_GOOGLE_MAPS_API_KEY}&libraries=places"
+    ></script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_MAPS_API_KEY%&libraries=places"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
