added feature stuff

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta property="og:title" content="Pacer" />
+    <meta property="og:image" content="project_pic.png" />
+    <meta property="og:description" content="Your go-to social hub for fitness enthusiasts!" />
+    <meta property="og:url" content='https://pacer-65mk.onrender.com' />
     <title>Pacer</title>
     <!-- <script
       defer
